--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.12.0"
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "@types/styled-components": "^5.1.15",
+    "babel-plugin-styled-components": "^1.12.0",
+    "typescript": "^4.4.4"
   }
 }
