--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 		"dev": "next",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint --fix"
 	},
 	"dependencies": {
 		"next": "latest",
@@ -21,6 +21,18 @@
 		"babel-plugin-styled-components": "^1.12.0",
 		"eslint": "<8.0.0",
 		"eslint-config-next": "12.0.3",
+		"husky": "^7.0.4",
+		"lint-staged": "^11.2.6",
 		"typescript": "^4.4.4"
+	},
+	"lint-staged": {
+		"src/**/*.{ts,tsx,json}": [
+			"yarn lint"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
 	}
 }
