add IMAGE_ID to GHA env

--- a/.github/workflows/pr-docker.yaml
+++ b/.github/workflows/pr-docker.yaml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
 
+env:
+  IMAGE_ID: ghcr.io/${{ github.repository }}
+
 jobs:
   lint-build:
     name: Lint and Build NextJS App
