--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-is": "^17.0.2",
-    "styled-components": "^5.2.3",
-    "styled-reset": "^4.3.4"
-  },
-  "devDependencies": {
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.34",
-    "@types/styled-components": "^5.1.15",
-    "babel-plugin-styled-components": "^1.12.0",
-    "typescript": "^4.4.4"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "next",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint --fix"
+	},
+	"dependencies": {
+		"next": "latest",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-is": "^17.0.2",
+		"styled-components": "^5.2.3",
+		"styled-reset": "^4.3.4"
+	},
+	"devDependencies": {
+		"@types/node": "^16.11.6",
+		"@types/react": "^17.0.34",
+		"@types/styled-components": "^5.1.15",
+		"babel-plugin-styled-components": "^1.12.0",
+		"eslint": "<8.0.0",
+		"eslint-config-next": "12.0.3",
+		"husky": "^7.0.4",
+		"lint-staged": "^11.2.6",
+		"typescript": "^4.4.4"
+	},
+	"lint-staged": {
+		"src/**/*.{ts,tsx,json}": [
+			"yarn lint"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	}
 }
