--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
 		"lint": "next lint --fix"
 	},
 	"dependencies": {
+		"date-fns": "^2.25.0",
 		"framer-motion": "^5.3.0",
+		"gray-matter": "^4.0.3",
 		"next": "latest",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
 		"react-is": "^17.0.2",
+		"remark": "^14.0.1",
+		"remark-html": "^15.0.0",
+		"sharp": "^0.29.2",
 		"styled-components": "^5.2.3",
 		"styled-reset": "^4.3.4"
 	},
