--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
 		"react-is": "^17.0.2",
-		"remark": "^14.0.1",
+		"remark": "13",
 		"remark-html": "^15.0.0",
 		"sharp": "^0.29.2",
-		"styled-components": "^5.2.3",
-		"styled-reset": "^4.3.4"
+		"styled-components": "^5.2.3"
 	},
 	"devDependencies": {
 		"@types/node": "^16.11.6",
