--- a/package.json
+++ b/package.json
@@ -1,44 +1,34 @@
 {
-	"private": true,
-	"scripts": {
-		"dev": "next",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint --fix"
-	},
-	"dependencies": {
-		"date-fns": "^2.25.0",
-		"framer-motion": "^5.3.0",
-		"gray-matter": "^4.0.3",
-		"next": "latest",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-icons": "^4.3.1",
-		"react-is": "^17.0.2",
-		"remark": "13",
-		"remark-html": "^15.0.0",
-		"sharp": "^0.29.2",
-		"styled-components": "^5.2.3"
-	},
-	"devDependencies": {
-		"@types/node": "^16.11.6",
-		"@types/react": "^17.0.34",
-		"@types/styled-components": "^5.1.15",
-		"babel-plugin-styled-components": "^1.12.0",
-		"eslint": "<8.0.0",
-		"eslint-config-next": "12.0.3",
-		"husky": "^7.0.4",
-		"lint-staged": "^11.2.6",
-		"typescript": "^4.4.4"
-	},
-	"lint-staged": {
-		"src/**/*.{ts,tsx,json}": [
-			"yarn lint"
-		]
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	}
+  "name": "adam.lehechka.com",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "date-fns": "^2.25.0",
+    "gray-matter": "^4.0.3",
+    "next": "12.0.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "rehype-highlight": "^5.0.0",
+    "rehype-react": "^7.0.3",
+    "rehype-slug": "^5.0.0",
+    "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.0",
+    "remark-rehype": "^10.0.1",
+    "sharp": "^0.29.2",
+    "unified": "^10.1.0",
+    "water.css": "^2.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "16.11.7",
+    "@types/react": "17.0.34",
+    "eslint": "7",
+    "eslint-config-next": "12.0.3",
+    "typescript": "4.4.4"
+  }
 }
