--- a/.github/workflows/pr-docker.yaml
+++ b/.github/workflows/pr-docker.yaml
@@ -3,6 +3,9 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - 'feature/docker-caching'
 
 env:
   IMAGE_ID: ghcr.io/${{ github.repository }}
