--- a/.github/workflows/pr-docker.yaml
+++ b/.github/workflows/pr-docker.yaml
@@ -11,10 +11,8 @@ env:
   IMAGE_ID: ghcr.io/${{ github.repository }}
 
 jobs:
-  lint-build:
-    # skip this step for now
-    if: github.ref_type == 'tag'
-    name: Lint and Build NextJS App
+  lint-build-docker:
+    name: Lint, Build and Dockerize NextJS App
     runs-on: ubuntu-latest
 
     steps:
@@ -30,7 +28,7 @@ jobs:
         uses: c-hive/gha-yarn-cache@v2
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --frozen-lockfile --production --ignore-scripts --prefer-offline
         env:
           CI: true
 
@@ -44,19 +42,5 @@ jobs:
         env:
           CI: true
 
-  docker:
-    name: Dockerize NextJS App
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@main
-
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
-
-      - name: Set up Docker with Caching
-        uses: satackey/action-docker-layer-caching@v0.0.11
-
-      - name: Build amd64 Docker Image
+      - name: Build Docker Image
         run: docker build -t ${{ env.IMAGE_ID }}:${{ github.sha }} .
