--- a/.github/workflows/pr-docker.yaml
+++ b/.github/workflows/pr-docker.yaml
@@ -9,8 +9,7 @@ on:
 
 env:
   REGISTRY_HOSTNAME: ghcr.io
-  TAG: latest
-  BUILD_IMAGE: ${{ env.REGISTRY_HOSTNAME }}/${{ github.repository }}:${{ env.TAG }}
+  TAG: ${{ github.sha }}
 
 jobs:
   lint-build-docker:
@@ -18,6 +17,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Environment Variables
+        run: |
+          export ${{ env.REGISTRY_HOSTNAME }}/${{ github.repository }}:${{ env.TAG }}
+          echo "BUILD_IMAGE=$BUILD_IMAGE"
+          echo "BUILD_IMAGE=$BUILD_IMAGE" >> $GITHUB_ENV
+
       - name: Checkout Repo
         uses: actions/checkout@main
 
@@ -48,4 +53,4 @@ jobs:
         run: yarn install --production --ignore-scripts --prefer-offline
 
       - name: Build Docker Image
-        run: docker build -t ${{ env.BUILD_IMAGE }} .
+        run: docker build -t $BUILD_IMAGE .
