--- a/.github/workflows/pr-docker.yaml
+++ b/.github/workflows/pr-docker.yaml
@@ -5,14 +5,21 @@ on:
       - main
 
 env:
-  IMAGE_ID: ghcr.io/${{ github.repository }}
+  REGISTRY_HOSTNAME: ghcr.io
+  TAG: ${{ github.sha }}
 
 jobs:
-  lint-build:
-    name: Lint and Build NextJS App
+  lint-build-docker:
+    name: Lint, Build and Dockerize NextJS App
     runs-on: ubuntu-latest
 
     steps:
+      - name: Environment Variables
+        run: |
+          export BUILD_IMAGE=${{ env.REGISTRY_HOSTNAME }}/${{ github.repository }}:${{ env.TAG }}
+          echo "BUILD_IMAGE=$BUILD_IMAGE"
+          echo "BUILD_IMAGE=$BUILD_IMAGE" >> $GITHUB_ENV
+
       - name: Checkout Repo
         uses: actions/checkout@main
 
@@ -39,16 +46,8 @@ jobs:
         env:
           CI: true
 
-  docker:
-    name: Dockerize NextJS App
-    runs-on: ubuntu-latest
+      - name: Cleanup Node Modules
+        run: yarn install --production --ignore-scripts --prefer-offline
 
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@main
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build amd64 Docker Image
-        run: docker build --platform linux/amd64 -t ${{ env.IMAGE_ID }}:${{ github.sha }} .
+      - name: Build Docker Image
+        run: docker build -t $BUILD_IMAGE .
