--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,17 +1,24 @@
 name: Cloud Run Deploy
 on:
+  pull_request:
   push:
     branches:
       - main
       - 'feature/*'
-  pull_request:
-    branches:
-      - main
+
+# Kill the workflow if the PR is updated with a new commit
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: 'read'
+      id-token: 'write'
 
     steps:
       - name: Checkout Repo
